--- a/_posts/2022-12-20-리액트-기본원리 정리.md
+++ b/_posts/2022-12-20-리액트-기본원리 정리.md
@@ -1,5 +1,5 @@
 ---
-title: "리액트 study: 기본원리- VDOM, 불변성, useMemo와 useCallback"
+title: "React study: 리액트가 성능을 보장하는 방법"
 categories: javascript
 tags: ["javascript"]
 ---
