--- a/_posts/2022-12-17-모으잡-인증인가.md
+++ b/_posts/2022-12-17-모으잡-인증인가.md
@@ -614,7 +614,21 @@ export const getServerSideProps = async ({ req }: NextPageContext) => {
 
 
 
-이렇게 서버사이드 렌더링을 이용해서 인증을 이용하다 보니 전체적으로 컴포넌트들이 간단해졌고, **빈페이지를 보여주지 않고 페이지 이동**이 이루어지는 점이 너무 좋았다.  이후에는 프로젝트에 대한 피드백으로 인증된 사용자만 볼 수 있게 하지 말고, 처음부터 채용공고들을 다 보여주면 좋겠다고 해줘서, 이점을 반영해 크롤링 기능을 없애고, 전반적으로 수정해 보기로 계획을 세웠다. 
+## 👓성능 비교
+
+크롬의 개발자도구를 이용해 완료 (페이지를 모두 불러오는데 까지 걸리는 시간)를 기준으로 CSR을 이용해 인증을 했을때 시간과 SSR을 이용해 인증을 했을 때 시간을 비교해보았다. 
+
+![페이지 성능 측정](../assets/img/2022-12-17-모으잡-인증인가/페이지 성능 측정-1671566479260-2.png)
+
+
+
+위 사진과 같이 CSR은 총 1.52s, SSR은 955ms로 SSR이 CSR에 비해 38%정도 로딩속도를 개선시킨것을 알수 있었다.
+
+
+
+## 마치며
+
+이렇게 서버사이드 렌더링을 이용해서 인증을 적용하면서 전체적으로 컴포넌트들이 간단해졌고, **빈페이지를 보여주지 않고 페이지 이동**이 이루어져 성능 개선도 이루어진 점이 너무 좋았다. 이후에는 페이지마다 권한을 정하고 페이지 개선을 한 후에 SEO와 HTTPS를 적용하는 작업을 할 예정이다. 
 
 
 
