--- a/_posts/2022-09-19-Array.md
+++ b/_posts/2022-09-19-Array.md
@@ -4,7 +4,9 @@ categories: javascript
 tags: [javascript, 문법]
 ---
 
-자바스크립트에서의 배열은 객체로, index를 통해 데이터에 접근할 수 있게 정리해놓은 자료구조이다. 다른 언어들과는 다르게 메모리셀에서 변수들이 연속적으로 저장되어 있지는 않는다.
+자바스크립트에서의 배열은 객체로, index를 통해 데이터에 접근할 수 있게 정리해놓은 자료구조이다. 다른 언어들과는 다르게 메모리셀에서 변수들이 연속적으로 저장되어 있지는 않는다. 유용한 자료구조 배열에 대해 알아보자.
+
+
 
 ### 1. Array 만들기
 
@@ -35,17 +37,17 @@ array = array.from(arr2); //[1,4,'A']
 
 #### 2.1 add와 delete (비추)
 
-​ add와 delete는 배열의 index를 이용해서 요소를 추가 삭제하는 방법이지만 index를 직접 이용하기 때문에 배열의 크기나 위치에 따른 데이터 값을 모를 경우에 문제가 될 수 있으며 delete의 경우 삭제하고 빈 공간이 남아 있는 문제가 있다.
+ add와 delete는 배열의 index를 이용해서 요소를 추가 삭제하는 방법이지만 index를 직접 이용하기 때문에 배열의 크기나 위치에 따른 데이터 값을 모를 경우에 문제가 될 수 있으며 delete의 경우 삭제하고 빈 공간이 남아 있는 문제가 있다.
 
 #### 2.2 push와 pop
 
-​ **push**와 **pop**은 배열의 끝에 요소를 추가하고 삭제하는 방법이다. **push**는 요소를 추가하고 난 다음의 배열의 길이를 반환하고, **pop**은 제거한 요소를 반환한다.
+ **push**와 **pop**은 배열의 끝에 요소를 추가하고 삭제하는 방법이다. **push**는 요소를 추가하고 난 다음의 배열의 길이를 반환하고, **pop**은 제거한 요소를 반환한다.
 
 맨뒤의 요소만 제거하고 추가하기 때문에 O(1)의 시간복잡도를 가진다.
 
 #### 2.3 unshift와 shift
 
-​ **unshift**와**shift** 는 배열의 처음에 요소를 추가하고 삭제하는 방법이다. **unshift**는 push와 같이 요소를 추가하고 난 다음의 배열의 길이를 반환하고, **shift** 는 제거한 요소를 반환한다. **unshift**와 **shift**는 **push**와 **pop**과는 다르게 배열의 맨앞의 요소를 제거하고 추가하기 때문에 전체적인 배열요소들의 이동이 있다. 그렇기 때문에 **unshift**와 **shift**의 시간 복잡도 O(n)로 더 오래걸린다.
+ **unshift**와**shift** 는 배열의 처음에 요소를 추가하고 삭제하는 방법이다. **unshift**는 push와 같이 요소를 추가하고 난 다음의 배열의 길이를 반환하고, **shift** 는 제거한 요소를 반환한다. **unshift**와 **shift**는 **push**와 **pop**과는 다르게 배열의 맨앞의 요소를 제거하고 추가하기 때문에 전체적인 배열요소들의 이동이 있다. 그렇기 때문에 **unshift**와 **shift**의 시간 복잡도 O(n)로 더 오래걸린다.
 
 ```javascript
 const alphabets = ["a", "b", "c"];
@@ -72,7 +74,7 @@ console.log(alphabets.shift()); //'d'
 
 #### 3.2 배열을 수정하는 함수
 
-​ 앞서 정리한 추가,삭제 함수들과 함께 배열 자체를 수정하는 함수를 정리하면 다음과 같다.
+ 앞서 정리한 추가,삭제 함수들과 함께 배열 자체를 수정하는 함수를 정리하면 다음과 같다.
 
 1. array.splice(start,count,value):
 
@@ -153,5 +155,3 @@ console.log(contact2); //[{firstName:"Youngjun", lastName:"Son"},person2]
 8.  array.flatMap( (item) => sth ) : array 요소들을 배열을 제거하고 다른 값으로 변환해서 반환한다.
 9.  array.sort((a,b)=> condition) : condition이 a-b는 내림차순, b-a는 오름차순으로 정렬한다.
 10. array.reduce((prev,curr)=>(sth), initialVal): 초기값을 시작으로 curr값을 callback함수에 맞게 prev값에 더해간다.
-
-배열의 고차함수는 너무 편리하고 코드를 간단하게 만들어주기 때문에 추가적인 예들이 생겼을 때 하나,하나 추가해 볼 예정이다.
