--- a/_posts/typescript/_posts/2023-01-24-타입추론 (1).md
+++ b/_posts/typescript/_posts/2023-01-24-타입추론 (1).md
@@ -64,11 +64,13 @@ function logProduct(product: Product) {
 
 그러면 항상 타입 추론에 맡기면 되는 걸까?
 
+
+
 앞서 정리했던 타입시스템을 통해 배웠던 **객체 리터럴**과 **함수의 인자와 반환값**은 명시적으로 타입을 정의해 줄 필요가 있다.
 
-먼저 객체 리터럴의 경우 앞서 정리했듯이 명시적으로 타입을 정의하면 `잉여 속성 체크`가 동작해 작성된 타입과 비교해 오타나 오류를 잡는데 도움을 줄 수 있다.
+먼저 객체 리터럴의 경우 명시적으로 타입을 정의하면 `잉여 속성 체크`가 동작해 작성된 타입과 비교해 오타나 오류를 잡는데 도움을 줄 수 있다.
 
-함수의 경우 반환값을 통해 오류를 막을 수 있다. 다음 예제를 보자.
+함수의 경우 반환 값을 통해 오류를 막을 수 있다. 다음 예제를 보자.
 
 ```typescript
 
@@ -166,6 +168,12 @@ const arr = [1, 2, 3] as const; // readonly [1,2,3]
 ```
 
 readonly로 최대한 좁은 타입으로 정해 줄 수 있다.
+
+
+
+## 🙏 타입 좁히기
+
+
 
 
 
